ci: Copy 7.37.0 csv to main
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/bundle/stable/eclipse-che-preview-kubernetes/manifests/org.eclipse.che_checlusterbackups_crd.yaml
+++ b/bundle/stable/eclipse-che-preview-kubernetes/manifests/org.eclipse.che_checlusterbackups_crd.yaml
@@ -40,6 +40,9 @@ spec:
           status:
             description: CheClusterBackupStatus defines the observed state of CheClusterBackup
             properties:
+              cheVersion:
+                description: Version that was backed up
+                type: string
               message:
                 description: Message explaining the state of the backup or an error message
                 type: string
