--- a/bundle/tech-preview-stable-all-namespaces/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusterbackups_crd.yaml
+++ b/bundle/tech-preview-stable-all-namespaces/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusterbackups_crd.yaml
@@ -40,6 +40,9 @@ spec:
           status:
             description: CheClusterBackupStatus defines the observed state of CheClusterBackup
             properties:
+              cheVersion:
+                description: Version that was backed up
+                type: string
               message:
                 description: Message explaining the state of the backup or an error message
                 type: string
