fix: fix make fmt

--- a/.github/workflows/pr-main-check.yml
+++ b/.github/workflows/pr-main-check.yml
@@ -75,11 +75,11 @@ jobs:
       run: |
         go get -u golang.org/x/tools/cmd/goimports
         git reset HEAD --hard
-        if [[ $(find . -not -path "./vendor/*" -name '*.go' -exec goimports -l {} \;) != "" ]]
+        make fmt
+        if [[ ! -z $(git status -s) ]]
         then
           echo "not well formatted sources are found."
           echo "execute 'make fmt' to fix the following:"
-          find . -not -path "./vendor/*" -name '*.go' -exec goimports -l {} \;
           git --no-pager diff
           exit 1
         fi
