feat: propagate openshift console URL to dashboard

--- a/config/rbac/cluster_role.yaml
+++ b/config/rbac/cluster_role.yaml
@@ -355,6 +355,14 @@ rules:
     - kubernetesimagepullers
     verbs:
     - '*'
+  - apiGroups:
+    - config.openshift.io
+    resources:
+    - consoles
+    resourcesNames:
+    - cluster
+    verbs:
+    - get
   ### CHE-OPERATOR ROLES ONLY: END
   # devworkspace-controller-view-workspaces.ClusterRole.yaml
   - apiGroups:
