--- a/config/rbac/cluster_role.yaml
+++ b/config/rbac/cluster_role.yaml
@@ -359,7 +359,7 @@ rules:
     - config.openshift.io
     resources:
     - consoles
-    resourcesNames:
+    resourceNames:
     - cluster
     verbs:
     - get
