--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -117,6 +117,8 @@ spec:
               value: "1"
             - name: ALLOW_DEVWORKSPACE_ENGINE
               value: "true"
+            - name: CHE_ENDPOINT_MONITOR
+              value: "false"
           livenessProbe:
             httpGet:
               path: /healthz
