Fixes according to review
Signed-off-by: Mykola Morhun <mmorhun@redhat.com>

--- a/bundle/next-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -114,7 +114,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.38.0-358.next
+  name: eclipse-che-preview-openshift.v7.38.0-360.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1125,7 +1125,7 @@ spec:
                         value: "1"
                       - name: ALLOW_DEVWORKSPACE_ENGINE
                         value: "true"
-                      - name: CHE_ENDPOINT_MONITOR
+                      - name: ADD_COMPONENT_READINESS_INIT_CONTAINERS
                         value: "false"
                     image: quay.io/eclipse/che-operator:next
                     imagePullPolicy: Always
@@ -1406,4 +1406,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.38.0-358.next
+  version: 7.38.0-360.next
