--- a/bundle/next/eclipse-che-preview-kubernetes/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-kubernetes/manifests/che-operator.clusterserviceversion.yaml
@@ -121,7 +121,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-kubernetes.v7.38.0-319.next
+  name: eclipse-che-preview-kubernetes.v7.38.0-321.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1122,7 +1122,7 @@ spec:
                         value: "1"
                       - name: ALLOW_DEVWORKSPACE_ENGINE
                         value: "true"
-                      - name: CHE_ENDPOINT_MONITOR
+                      - name: ADD_COMPONENT_READINESS_INIT_CONTAINERS
                         value: "false"
                     image: quay.io/eclipse/che-operator:next
                     imagePullPolicy: Always
@@ -1381,4 +1381,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.38.0-319.next
+  version: 7.38.0-321.next
