Add init containers to start Che correctly after node restart (#1139)
Signed-off-by: Mykola Morhun <mmorhun@redhat.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -117,6 +117,8 @@ spec:
               value: "1"
             - name: ALLOW_DEVWORKSPACE_ENGINE
               value: "true"
+            - name: ADD_COMPONENT_READINESS_INIT_CONTAINERS
+              value: "false"
           livenessProbe:
             httpGet:
               path: /healthz
