--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -255,7 +255,7 @@ spec:
                 - ALL
           resources:
             limits:
-              cpu: 500m
+              cpu: 1Gi
               memory: 512Mi
             requests:
               cpu: 100m
