Increase memory limit to 1Gi
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -255,8 +255,8 @@ spec:
                 - ALL
           resources:
             limits:
-              cpu: 1Gi
-              memory: 512Mi
+              cpu: 500m
+              memory: 1Gi
             requests:
               cpu: 100m
               memory: 64Mi
