--- a/bundle/next/eclipse-che-preview-kubernetes/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-kubernetes/manifests/che-operator.clusterserviceversion.yaml
@@ -121,7 +121,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-kubernetes.v7.38.0-321.next
+  name: eclipse-che-preview-kubernetes.v7.38.0-324.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1151,7 +1151,7 @@ spec:
                     resources:
                       limits:
                         cpu: 500m
-                        memory: 256Mi
+                        memory: 1Gi
                       requests:
                         cpu: 100m
                         memory: 64Mi
@@ -1381,4 +1381,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.38.0-321.next
+  version: 7.38.0-324.next
