--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -146,7 +146,7 @@ spec:
           resources:
             limits:
               cpu: 500m
-              memory: 256Mi
+              memory: 1Gi
             requests:
               cpu: 100m
               memory: 64Mi
