--- a/.github/workflows/dependencies-md-check.yaml
+++ b/.github/workflows/dependencies-md-check.yaml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - name: Checkout source code
       uses: actions/checkout@v1
-    - name: DEPENDENCIES.md file checker.
+    - name: DEPENDENCIES.md file validator.
       uses: che-incubator/dependencies-license-action@0.0.2
       env:
         EXCLUDE_DEPS: "github.com/bmizerany/assert, gotest.tools/v3, github.com/dhui/dktest, gotest.tools, github.com/golangplus/testing"
