fix: CRW-2383 bump limit to 5g in main branch (7.38)
Change-Id: I85f4d8cd30866a0c9fca16c38e1b1635fbdb1073
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -1162,7 +1162,7 @@ spec:
                     resources:
                       limits:
                         cpu: 500m
-                        memory: 2560Mi
+                        memory: 5Gi
                       requests:
                         cpu: 100m
                         memory: 64Mi
