fix: Try to fix environment mac os x.
Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

--- a/.github/workflows/minishift-operator-update.yaml
+++ b/.github/workflows/minishift-operator-update.yaml
@@ -18,7 +18,7 @@ on:
 jobs:
   minishift:
     name: Test Eclipse Che update from stable to next
-    runs-on: macos-latest
+    runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v1
     - name: Build Che operator image
