--- a/.github/workflows/pr-main-check.yml
+++ b/.github/workflows/pr-main-check.yml
@@ -86,6 +86,6 @@ jobs:
           exit 1
         fi
         FILES_TO_CHECK_LICENSE=$(find . -not -path "./mocks/*" -not -path "./vendor/*" -not -path "./testbin/*" \( -name '*.sh' -o -name "*.go" \))
-	      LICENSE_TEMPLATE="${GITHUB_WORKSPACE}/hack/license-header.txt"
-        addlicense -f "${LICENSE_TEMPLATE}" "${FILES_TO_CHECK_LICENSE}"
+        LICENSE_TEMPLATE="${GITHUB_WORKSPACE}/hack/license-header.txt"
+        addlicense --check -f "${LICENSE_TEMPLATE}" "${FILES_TO_CHECK_LICENSE}"
         go run ${GITHUB_WORKSPACE}/pkg/tools/license/check-license-formating.go -f "${LICENSE_TEMPLATE}" "${FILES_TO_CHECK_LICENSE}"
