--- a/.github/workflows/pr-main-check.yml
+++ b/.github/workflows/pr-main-check.yml
@@ -77,6 +77,7 @@ jobs:
         go get -u golang.org/x/tools/cmd/goimports
         go get -u github.com/google/addlicense@99ebc9c9db7bceb8623073e894533b978d7b7c8a
         git reset HEAD --hard
+        echo "[INFO] Check code format and imports."
         make fmt
         if [[ ! -z $(git status -s) ]]
         then
@@ -85,7 +86,9 @@ jobs:
           git --no-pager diff
           exit 1
         fi
+
+        echo "[INFO] Check license headers."
         FILES_TO_CHECK_LICENSE=$(find . -not -path "./mocks/*" -not -path "./vendor/*" -not -path "./testbin/*" \( -name '*.sh' -o -name "*.go" \))
         LICENSE_TEMPLATE="${GITHUB_WORKSPACE}/hack/license-header.txt"
-        addlicense --check -f "${LICENSE_TEMPLATE}" "${FILES_TO_CHECK_LICENSE}"
+        addlicense --check -f "${LICENSE_TEMPLATE}" ${FILES_TO_CHECK_LICENSE}
         go run ${GITHUB_WORKSPACE}/pkg/tools/license/check-license-formating.go -f "${LICENSE_TEMPLATE}" "${FILES_TO_CHECK_LICENSE}"
