--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -25,5 +25,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: quay.io/eclipse/che-operator:next
-  newName: quay.io/eclipse/che-operator
+  newName: quay.io/aandriienko/che-operator
   newTag: next
