--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -17,6 +17,7 @@ metadata:
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
+    app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/name: che
   name: che-operator
 rules:
