--- a/bundle/next-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator_v1_serviceaccount.yaml
+++ b/bundle/next-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator_v1_serviceaccount.yaml
@@ -18,4 +18,5 @@ metadata:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
     app.kubernetes.io/name: che
+    app.kubernetes.io/part-of: che.eclipse.org
   name: che-operator
