--- a/bundle/next-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -126,7 +126,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.40.0-371.next
+  name: eclipse-che-preview-openshift.v7.40.0-372.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1068,6 +1068,7 @@ spec:
                   app.kubernetes.io/instance: che
                   app.kubernetes.io/managed-by: olm
                   app.kubernetes.io/name: che
+                  app.kubernetes.io/part-of: che.eclipse.org
               spec:
                 containers:
                   - args:
@@ -1426,4 +1427,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.40.0-371.next
+  version: 7.40.0-372.next
