--- a/helmcharts/templates/cluster_rolebinding.yaml
+++ b/helmcharts/templates/cluster_rolebinding.yaml
@@ -17,12 +17,11 @@ metadata:
   labels:
     app.kubernetes.io/name: che
     app.kubernetes.io/instance: che
-    app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
 subjects:
   - kind: ServiceAccount
     name: che-operator
-    namespace: eclipse-che
+    namespace: '{{ .Release.Namespace }}'
 roleRef:
   kind: ClusterRole
   name: che-operator
