--- a/helmcharts/templates/manager.yaml
+++ b/helmcharts/templates/manager.yaml
@@ -14,12 +14,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: che-operator
-  namespace: eclipse-che
+  namespace: '{{ .Release.Namespace }}'
   labels:
     app: che-operator
     app.kubernetes.io/name: che
     app.kubernetes.io/instance: che
-    app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
 spec:
   replicas: 1
@@ -34,7 +33,6 @@ spec:
         app: che-operator
         app.kubernetes.io/name: che
         app.kubernetes.io/instance: che
-        app.kubernetes.io/part-of: che.eclipse.org
         app.kubernetes.io/component: che-operator
     spec:
       containers:
@@ -70,7 +68,7 @@ spec:
             - name: RELATED_IMAGE_devfile_registry
               value: quay.io/eclipse/che-devfile-registry:next
             - name: RELATED_IMAGE_che_tls_secrets_creation_job
-              value: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
+              value: quay.io/eclipse/che-tls-secret-creator:alpine-d1ed4ad
             - name: RELATED_IMAGE_pvc_jobs
               value: registry.access.redhat.com/ubi8-minimal:8.5-204
             - name: RELATED_IMAGE_postgres
@@ -92,7 +90,7 @@ spec:
             - name: RELATED_IMAGE_devworkspace_controller
               value: quay.io/devfile/devworkspace-controller:v0.9.0
             - name: RELATED_IMAGE_internal_rest_backup_server
-              value: quay.io/eclipse/che-backup-server-rest:b6cc165
+              value: quay.io/eclipse/che-backup-server-rest:eeacd92
             - name: RELATED_IMAGE_gateway_authentication_sidecar
               value: quay.io/openshift/origin-oauth-proxy:4.7
             - name: RELATED_IMAGE_gateway_authorization_sidecar
@@ -150,7 +148,7 @@ spec:
           resources:
             limits:
               cpu: 500m
-              memory: 256Mi
+              memory: 5Gi
             requests:
               cpu: 100m
               memory: 64Mi
