--- a/helmcharts/templates/role_binding.yaml
+++ b/helmcharts/templates/role_binding.yaml
@@ -10,20 +10,19 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
 metadata:
   name: che-operator
   labels:
     app.kubernetes.io/name: che
     app.kubernetes.io/instance: che
-    app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
+  namespace: '{{ .Release.Namespace }}'
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: che-operator
 subjects:
   - kind: ServiceAccount
     name: che-operator
-    namespace: eclipse-che
-roleRef:
-  kind: ClusterRole
-  name: che-operator
-  apiGroup: rbac.authorization.k8s.io
