--- a/helmcharts/templates/service_account.yaml
+++ b/helmcharts/templates/service_account.yaml
@@ -10,20 +10,12 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
+apiVersion: v1
+kind: ServiceAccount
 metadata:
   name: che-operator
   labels:
     app.kubernetes.io/name: che
     app.kubernetes.io/instance: che
-    app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
-subjects:
-  - kind: ServiceAccount
-    name: che-operator
-    namespace: eclipse-che
-roleRef:
-  kind: ClusterRole
-  name: che-operator
-  apiGroup: rbac.authorization.k8s.io
+  namespace: '{{ .Release.Namespace }}'
