--- a/helmcharts/crds/org_v1_che_crd.yaml
+++ b/helmcharts/crds/org_v1_che_crd.yaml
@@ -15,6 +15,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.4.1
+  creationTimestamp: null
   name: checlusters.org.eclipse.che
 spec:
   group: org.eclipse.che
