--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -150,7 +150,7 @@ spec:
           resources:
             limits:
               cpu: 500m
-              memory: 5Gi
+              memory: 256Mi
             requests:
               cpu: 100m
               memory: 64Mi
