chore: Update next bundle
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-kubernetes/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-kubernetes/manifests/che-operator.clusterserviceversion.yaml
@@ -133,7 +133,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-kubernetes.v7.40.0-335.next
+  name: eclipse-che-preview-kubernetes.v7.40.0-375.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -836,6 +836,17 @@ spec:
                 - create
             - apiGroups:
                 - ""
+              resourceNames:
+                - workspace-preferences-configmap
+              resources:
+                - configmaps
+              verbs:
+                - create
+                - delete
+                - get
+                - patch
+            - apiGroups:
+                - ""
               resources:
                 - configmaps
                 - persistentvolumeclaims
@@ -869,6 +880,7 @@ spec:
                 - create
                 - delete
                 - get
+                - patch
             - apiGroups:
                 - ""
               resources:
@@ -1394,4 +1406,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.40.0-335.next
+  version: 7.40.0-375.next
