--- a/config/rbac/cluster_role.yaml
+++ b/config/rbac/cluster_role.yaml
@@ -452,6 +452,17 @@ rules:
   # devworkspace-controller-role.ClusterRole.yaml
   - apiGroups:
     - ""
+    resourceNames:
+    - workspace-preferences-configmap
+    resources:
+    - configmaps
+    verbs:
+    - create
+    - delete
+    - get
+    - patch
+  - apiGroups:
+    - ""
     resources:
     - configmaps
     - persistentvolumeclaims
@@ -485,6 +496,7 @@ rules:
     - create
     - delete
     - get
+    - patch
   - apiGroups:
     - ""
     resources:
