--- a/helmcharts/Chart.yaml
+++ b/helmcharts/Chart.yaml
@@ -11,6 +11,6 @@
 #
 
 apiVersion: v1
-description: A Helm chart for deploying Eclipse Che to Kubernetes
+description: A Helm chart for deploying Eclipse Che on a Kubernetes
 name: che
 version: 1.0.0
