--- a/helmcharts/templates/manager.yaml
+++ b/helmcharts/templates/manager.yaml
@@ -19,6 +19,7 @@ metadata:
     app: che-operator
     app.kubernetes.io/name: che
     app.kubernetes.io/instance: che
+    app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
 spec:
   replicas: 1
@@ -33,6 +34,7 @@ spec:
         app: che-operator
         app.kubernetes.io/name: che
         app.kubernetes.io/instance: che
+        app.kubernetes.io/part-of: che.eclipse.org
         app.kubernetes.io/component: che-operator
     spec:
       containers:
@@ -68,7 +70,7 @@ spec:
             - name: RELATED_IMAGE_devfile_registry
               value: quay.io/eclipse/che-devfile-registry:next
             - name: RELATED_IMAGE_che_tls_secrets_creation_job
-              value: quay.io/eclipse/che-tls-secret-creator:alpine-d1ed4ad
+              value: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
             - name: RELATED_IMAGE_pvc_jobs
               value: registry.access.redhat.com/ubi8-minimal:8.5-204
             - name: RELATED_IMAGE_postgres
@@ -90,7 +92,7 @@ spec:
             - name: RELATED_IMAGE_devworkspace_controller
               value: quay.io/devfile/devworkspace-controller:v0.9.0
             - name: RELATED_IMAGE_internal_rest_backup_server
-              value: quay.io/eclipse/che-backup-server-rest:eeacd92
+              value: quay.io/eclipse/che-backup-server-rest:b6cc165
             - name: RELATED_IMAGE_gateway_authentication_sidecar
               value: quay.io/openshift/origin-oauth-proxy:4.7
             - name: RELATED_IMAGE_gateway_authorization_sidecar
@@ -148,7 +150,7 @@ spec:
           resources:
             limits:
               cpu: 500m
-              memory: 5Gi
+              memory: 256Mi
             requests:
               cpu: 100m
               memory: 64Mi
