--- a/helmcharts/templates/role.yaml
+++ b/helmcharts/templates/role.yaml
@@ -16,6 +16,7 @@ metadata:
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
+    app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/name: che
   name: che-operator
   namespace: '{{ .Release.Namespace }}'
